--- a/configuration.yaml
+++ b/configuration.yaml
@@ -563,7 +563,7 @@ switch:
 notify:
   - name: pushbullet_notifier
     platform: pushbullet
-    api_key: o.dfpEZXLyfwrakRoM0cOjfX87lN7NK9Gt
+    api_key: !secret pushbullet_apikey
   - name: myslack
     platform: slack
     api_key: !secret slack_api
